schema/testdata/validation_operation_where_expression_forbidden_operator/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        update updateProfile(id) with (username) {
            @where(profile.identity = ctx.identity)
        }
    }
}
