schema/testdata/errors/operation_where_expression_forbidden_operator.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        update updateProfile(id) with (username) {
            //expect-error:20:51:AttributeExpressionError:Syntax error: token recognition error at: '= '
            //expect-error:20:51:AttributeExpressionError:Syntax error: mismatched input 'ctx' expecting <EOF>
            @where(profile.identity = ctx.identity)
        }
    }
}
